--- a/acuity_bot/acuitybotconfig.ini
+++ b/acuity_bot/acuitybotconfig.ini
@@ -1,5 +1,5 @@
-calendarID='CALENDAR_ID_GOES_HERE'
 userID='USER_ID_GOES_HERE'
 keyAPI='API_KEY_GOES_HERE'
-numberOfTimes='A_NUMBER_GOES_HERE' # optional, can delete this line no problem
-pullOnce='Y_OR_N_GOES_HERE' #optional Y/N value, can delete this line no problem
+calendarID='CALENDAR_ID_GOES_HERE' # optional, will prompt with calendar list selection if missing
+numberOfTimes='A_NUMBER_GOES_HERE' # optional, will prompt for value if missing
+pullOnce='Y_OR_N_GOES_HERE' #optional Y/N value, will default to N if missing
