Updated to Python 3
- Updated acuity bot to work on Python 3
- Comments and general readability stuff added
- Printing and ini stuff changed
- Hopefully general improvements to user intervention of program
- Initial MacOS support

--- a/acuity_bot/acuitybotconfig.ini
+++ b/acuity_bot/acuitybotconfig.ini
@@ -1,5 +1,5 @@
 userID='USER_ID_GOES_HERE'
 keyAPI='API_KEY_GOES_HERE'
-calendarID='CALENDAR_ID_GOES_HERE' # optional, will prompt with calendar list selection if missing
-numberOfTimes='A_NUMBER_GOES_HERE' # optional, will prompt for value if missing
-pullOnce='Y_OR_N_GOES_HERE' #optional Y/N value, will default to N if missing
+calendarID='CALENDAR_ID_GOES_HERE' # optional, will prompt with calendar list selection if not set/missing
+numberOfTimes='A_NUMBER_GOES_HERE' # optional, will default to 5 if not set/missing
+pullOnce='Y_OR_N_GOES_HERE' # optional Y/N value, will default to N if not set/missing
